Alignment bug fix
Replacing 15px with ‘auto’ to centre align the editor.

--- a/css/jetpack-start.css
+++ b/css/jetpack-start.css
@@ -1462,7 +1462,7 @@ input[type=submit]::-moz-focus-inner {
 }
 
 .first-post {
-  margin: 0 15px;
+  margin: 0 auto;
   max-width: 700px;
 }
 
