--- a/css/scss/ui-patterns/_first-post.scss
+++ b/css/scss/ui-patterns/_first-post.scss
@@ -3,7 +3,7 @@
 // ==========================================================================
 
 .first-post {
-	margin: 0 15px;
+	margin: 0 auto;
 	max-width: 700px;
 }
 
